mise à jour du ficher de styles custom

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,9 @@
 :root {
         --couleur-primaire : #0E6270;
     }
+
+.skip-links {
+  position: absolute;
+  transform: translateY(1%);
+  color: red;
+}
