--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,11 +7,11 @@ header ul {
 }
 
 hr, article.blog-item > a {
-  display: none
+  display: none;
 }
 
 .blog-item h2 a {
-  font-size: 1.25rem
-  text-decoration: underline: none;
+  font-size: 1.25rem;
+  text-decoration: underline;
 }
 
