mise à jour du ficher de styles custom

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -27,5 +27,8 @@ hr, article.blog-item > a {
   margin-top: 0rem;
   margin-bottom: 0rem;
 }
-
+.blog-item h2 {
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+}
 
