mise à jour du ficher de styles custom

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -22,13 +22,13 @@ hr, article.blog-item > a {
   font-size: 1.5rem;
 }
 
-/* réduire l'espacement entre les titres d'articles
+/* réduire l'espacement entre les titres d'articles */
 .blog-item {
   margin-top: 0rem;
   margin-bottom: 0rem;
 }
-.blog-item h2 {
+/* .blog-item h2 {
   margin-top: 0rem;
   margin-bottom: 0rem;
 }
-
+*/
