--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,6 +16,7 @@ hr, article.blog-item > a {
 .blog-item h2 a {
   font-size: 1.25rem;
   text-decoration: underline;
+  --underline-hover-width: 50%
   transition: 0.1s;
 }
 /* agrandir les titres quand on passe dessus avec la souris + élargir la ligne qui souligne */
