mise à jour du ficher de styles custom

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,6 +1,10 @@
 :root {
         --couleur-primaire : #07357d;
-    }
+}
+
+svg {
+   stroke: --couleur-primaire;
+}
 
 
 /* pour inverser Accueil et Articles */
