--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -12,7 +12,7 @@ svg {
 header {
    background-image: url(https://raw.githubusercontent.com/t-isaac/test-website-repo-3796/ca0c69883f9e42cb11f8649d1f07f570995e85e3/images/dessin.svg);
    background-repeat: no-repeat;
-   background-position: center center;
+   background-position: left center;
    background-size: contain;
 }
 
