mise à jour du ficher de styles custom

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -9,7 +9,7 @@ svg {
 }
 
 /* Le "logo" */
-div.container nav {
+div.container {
    background-image: url(https://raw.githubusercontent.com/t-isaac/test-website-repo-3796/ca0c69883f9e42cb11f8649d1f07f570995e85e3/images/dessin.svg);
    background-repeat: no-repeat;
    background-position: left center;
