mise à jour du ficher de styles custom

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10,7 +10,7 @@ svg {
 
 /* Le "logo" */
 div.container {
-   background-image: url(https://raw.githubusercontent.com/t-isaac/test-website-repo-3796/ca0c69883f9e42cb11f8649d1f07f570995e85e3/images/dessin.svg);
+   background-image: url(https://raw.githubusercontent.com/t-isaac/test-website-repo-3796/a941870dad169f45546a11627b81e7aa254f52e1/images/dessin.png);
    background-repeat: no-repeat;
    background-position: left center;
    background-size: contain;
