--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -15,6 +15,10 @@ div.container {
    background-position: left center;
    background-size: contain;
 }
+@media only screen and (max-width:200px) {
+  div.container{
+      background-size: 40%; }
+}
 
 
 
