--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -37,6 +37,11 @@ header ul {
   flex-direction: row-reverse;
 }
 
+header ul li a[href~="images"] {
+   display: none
+}
+
+
 /* des classe qui permettent d'aligner à gauche, au centre ou à droite des images (a priori) avec ou sans le caractère flottant*/
 .GF {
    float: left;
