--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -37,8 +37,8 @@ header ul {
   flex-direction: row-reverse;
 }
 
-header ul li a[href~="images"] {
-   display: none
+header a[href~="images"] {
+   display: none;
 }
 
 
