mise à jour du ficher de styles custom

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -38,7 +38,7 @@ header ul {
 }
 
 /* header a[href~="images"] { */
-header li
+header li {
    display: block;
    width: 10rem;
    height: 10rem;
