mise à jour du ficher de styles custom

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -37,8 +37,8 @@ header ul {
   flex-direction: row-reverse;
 }
 
-/* header a[href~="images"] { */
-header li {
+header a[href~="images"] {
+/* header li { */
    display: block;
    width: 10rem;
    height: 10rem;
