--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -37,7 +37,7 @@ header ul {
   flex-direction: row-reverse;
 }
 
-header a[href~="images"] {
+header a[href$="/images/"] {
 /* header li { */
    display: block;
    width: 10rem;
