mise à jour du ficher de styles custom

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -35,6 +35,7 @@ div.container {
 /* pour inverser Accueil et Articles */
 header ul {
   flex-direction: row-reverse;
+  gap: 0rem;
 }
 
 /* a récupérer pour logo RSS */
