mise à jour du ficher de styles custom

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,5 @@
 :root {
-        --couleur-primaire : #07357d;
+        --couleur-primaire : #753785;
 }
 
 /* pour le Voilier soit de la couleur du thème */
